@@ -1630,7 +1630,8 @@ static void *_assoc_cache_mgr(void *no_data)
 	}
 	
 	debug2("got real data from the database "
-	       "refreshing the association ptr's %d", list_count(job_list));
+	       "refreshing the association ptr's for %d jobs",
+	       list_count(job_list));
 	itr = list_iterator_create(job_list);
 	while ((job_ptr = list_next(itr))) {
 		if(job_ptr->qos) {
@@ -1650,7 +1651,8 @@ static void *_assoc_cache_mgr(void *no_data)
 		if(job_ptr->assoc_id) {
 			memset(&assoc_rec, 0, sizeof(acct_association_rec_t));
 			assoc_rec.id = job_ptr->assoc_id;
-
+			info("assoc is %x for job %u", 
+			     job_ptr->assoc_ptr, job_ptr->job_id);
 			if (assoc_mgr_fill_in_assoc(
 				    acct_db_conn, &assoc_rec,
 				    accounting_enforce, 
@@ -1662,6 +1664,8 @@ static void *_assoc_cache_mgr(void *no_data)
 				/* not a fatal error, association could have
 				 * been removed */
 			}
+			info("now assoc is %x for job %u", 
+			     job_ptr->assoc_ptr, job_ptr->job_id);
 		}
 	}
 	list_iterator_destroy(itr);
